--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="bg">
     <nav id="nav">
       <li><a href="h12.html">About Me</a></li>
-      <li><a href="#projects">Projects</a></li>
+      <li><a href="h12.html">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="#skills">Skills</a></li>
   </nav>
